# swagger/swagger.yml
@@ -927,7 +927,7 @@ paths:
     get:
       tags:
       - medicinaTipoAntecedente
-      description: consulta todos los registros de la tabla AccesoHistoriaClinica
+      description: consulta todos los registros de la tabla MedicinaTipoAntecedente
       operationId: MedicinaTipoAntecedenteController.Get All
       parameters:
       - in: consulta
@@ -958,7 +958,7 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.AccesoHistoriaClinica'
+            $ref: '#/definitions/models.MedicinaTipoAntecedente'
         "403":
           description: ""
     post:
@@ -969,7 +969,7 @@ paths:
       parameters:
       - in: body
         name: body
-        description: Cuerpo para el contenido de AccesoHistoriaClinica
+        description: Cuerpo para el contenido de MedicinaTipoAntecedente
         required: true
         schema:
           $ref: '#/definitions/models.MedicinaTipoAntecedente'
@@ -1010,7 +1010,7 @@ paths:
         type: string
       - in: body
         name: body
-        description: Cuerpo para el contenido de AccesoHistoriaClinica
+        description: Cuerpo para el contenido de MedicinaTipoAntecedente
         required: true
         schema:
           $ref: '#/definitions/models.MedicinaTipoAntecedente'
